//
// Copyright 2020 DXOS.
//

syntax = "proto3";

package dxos.ipc.bot;

import "google/protobuf/any.proto";

//
// Root codec message.
//
message Message {
  google.protobuf.Any message = 1;
}

message SignChallenge {
  bytes message = 1;
}

message SignChallengeResponse {
  bytes signature = 1;
}

message ConfirmConnection {
  string id = 1;
}

message InvitationMessage {

  message Invitation {
    string swarmKey = 1;
    string invitation = 2;
    string hash = 3;
  }

  Invitation invitation = 1;
  string topic = 2;
}
